# jellyfuse

./: +not-found.html  .env.tpl  .gitignore  404.html  CLAUDE.md  README.md  _sitemap.html  bunfig.toml  commitlint.config.cjs  lefthook.yml  package.json  privacy.html  tsconfig.json
.github/workflows/: ci.yml  deploy-web.yml
_expo/static/js/web/: entry-acd201cbb94d8140fe7324397617ca0f.js
apps/: .gitkeep
apps/mobile/: app.config.ts  app.json  eas-build-post-install.sh  eas.json  jest.config.js  jest.setup.ts  package.json
apps/mobile/__mocks__/: react-native-mmkv.js
apps/mobile/plugins/: with-android-cleartext.js
apps/mobile/scripts/: generate-icon.mjs  icon-check.sh
apps/mobile/src/app/: _layout.tsx  index.tsx  profile-picker.tsx
apps/mobile/src/app/(app)/: _layout.tsx  index.tsx  requests.tsx  search.tsx  test-mpv.tsx
apps/mobile/src/app/(auth)/: _layout.tsx  profile-picker.tsx  server.tsx  sign-in.tsx
apps/mobile/src/features/home/: mock-shelves.ts
apps/mobile/src/services/api/: client.ts
apps/mobile/src/services/auth/: auth-context-builder.ts  persisted-auth.ts  state.tsx  users.test.ts  users.ts
apps/mobile/src/services/connection/: monitor.ts
apps/mobile/src/services/device-id/: index.ts
apps/mobile/src/services/downloads/: context.tsx  enqueue.ts  local-stream.ts  next-local-episode.test.ts  next-local-episode.ts  sidecar-download.ts  use-item-download.ts  use-local-downloads.ts  use-next-local-episode.ts
apps/mobile/src/services/i18n/: init.ts  polyfills.ts  sync.ts  types.d.ts
apps/mobile/src/services/jellyseerr/: client.ts  disconnect-monitor.ts
apps/mobile/src/services/nav-state/: store.test.ts  store.ts
apps/mobile/store-assets/metadata/: en-US.md
apps/web/: .gitignore  README.md  app.config.ts  eslint.config.js  package.json
apps/web/design/: DESIGN_BRIEF.md  NOTES.md  colors_and_type.css  source.html
apps/web/src/app/: +not-found.tsx  _layout.tsx  index.tsx
apps/web/src/components/: bullet-list.tsx  codec-chip.tsx  cta-button.tsx  device-frame.tsx  eyebrow.tsx  faq-item.tsx  feature-card.tsx  feature-icon.tsx  heading.tsx  layout.ts  posters.tsx  reveal.tsx  section.tsx  status-pill.tsx  text-link.tsx  web-styles.ts
apps/web/src/lib/: content.ts  hero-cells.ts  use-nav-scroll.ts  use-reduced-motion.ts  use-reveal.ts  use-scroll-pin.ts
apps/web/src/sections/: faq.tsx  feature-grid.tsx  footer.tsx  fusion.tsx  hero.tsx  nav.tsx  one-player.tsx  platforms.tsx  privacy.tsx
docs/: _config.yml  feature-audit.md  jellyseerr-disconnect-plan.md  native-video-pipeline-phase-2.md  native-video-pipeline.md  port-plan.md  privacy.md  secrets.md  store-submission.md
docs/release-notes/: v1.0.0.md
docs/verification/: native-video-pipeline-phase-2.md
legal/: privacy.md
modules/: README.md
modules/downloader/: Downloader.podspec  nitro.json  package.json  tsconfig.json
modules/downloader/android/: CMakeLists.txt  build.gradle
modules/downloader/ios/: HybridDownloader.swift
modules/downloader/plugin/: index.js
modules/downloader/src/: Downloader.nitro.ts  index.ts
modules/native-mpv/: .gitignore  NativeMpv.podspec  README.md  app.plugin.js  nitro.json  package.json  tsconfig.json
modules/native-mpv/android/: CMakeLists.txt  build.gradle
modules/native-mpv/android/src/main/: AndroidManifest.xml
modules/native-mpv/android/src/main/cpp/: cpp-adapter.cpp  mpv_jni.cpp
modules/native-mpv/android/src/main/java/com/margelo/nitro/nativempv/: AudioFocusController.kt  HybridMpvVideoView.kt  HybridNativeMpv.kt  MpvBridge.kt  MpvEventThread.kt  MpvSurfaceView.kt  NativeMpvPackage.kt
modules/native-mpv/docs/: phase-1-starter-prompt.md  phase-1b-path-b-plan.md  render-strategy-spike.md
modules/native-mpv/ios/: FFmpegBridge.mm  FFmpegVideoBridge.swift  HybridMpvVideoView.swift  HybridNativeMpv.swift  MpvRenderContextSource.swift  NativeMpv-Prefix.pch  NativeVideoToolboxSource.swift
modules/native-mpv/ios/Libmpv/: module.modulemap
modules/native-mpv/ios/render/: MpvHdrMode.swift  MpvMetalView.swift  MpvRenderContext.swift  MpvSampleBufferEnqueuer.swift  MpvVulkanBridge.swift
modules/native-mpv/scripts/: build-libmpv-android.sh  fetch-libmpv-android.sh  fetch-libmpv.sh  fetch-mpvkit.sh
modules/native-mpv/src/: MpvVideoView.nitro.ts  MpvVideoView.tsx  NativeMpv.nitro.ts  index.ts
patches/: expo-dev-launcher@55.0.27.patch
scripts/: deploy-privacy.sh
tooling/eslint-config/: index.js  package.json
tooling/tsconfig-base/: package.json  tsconfig.base.json
tooling/vitest-preset/: index.mjs  index.ts  package.json
(+140 files in other folders)
